Updated condition: Correct and Wrong Letters
Still needs to fix:
Win conditions
Duplicate letter guessing

--- a/Hangman/hangman.html
+++ b/Hangman/hangman.html
@@ -8,7 +8,7 @@
 
 <body>
     <div id="hang update">
-        <img id="HangmanImage" src="images/hangman6.gif" alt="Hangman starts">
+        <img id="HangmanImage" src="images/images/hangman6.gif" alt="Hangman starts">
         <div id="clue">Press New Game to start</div>
     </div>
     
